# agentic-rag

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  config.yaml  docker-compose.yml  guardrails.yaml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  question.yml
.github/workflows/: ci.yml  codeql.yml
docker/: entrypoint.sh
docker/smoke/: chunks.jsonl
docs/: audit-log.md  benchmarks.md  golden-dataset.md  guardrails.md  judge-calibration.md  limitations.md  observability.md
docs/adr/: 001-provider-adapter-protocol.md  002-corpus-choice.md  003-chunking-strategy.md  004-sqlite-fts5-bm25.md  005-prompt-versioning.md  006-llm-judge-design.md  007-agent-design.md  008-guardrails-design.md  009-observability-api-packaging.md
docs/assets/: demo-agentic-ask.cast
docs/fragments/benchmarks/: 01-methodology.md  02-week2-config.md  03-week2-analysis.md  04-week3-config.md  05-week3-analysis.md  06-reproduce.md  07-week4-analysis.md  08-week5-config.md  09-week5-analysis.md  10-week6-guardrails.md  11-week8-config.md  12-week8-analysis.md
docs/plan/: week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-06.md  week-07.md  week-08.md
docs/reviews/: week-03-spotcheck.md  week-05-traces.md  week-07-load.md
evals/: build_report.py  rejudge.py  run_calibration.py  run_canary.py  run_generation.py  run_guardrails.py  run_load.py  run_retrieval.py
evals/calibration/: labels.jsonl  selected.jsonl  selected.rejudge-anthropic-judge.v1.jsonl  selected.rejudge-anthropic-judge.v2.jsonl  selected.rejudge-google-judge.v1.jsonl  selected.rejudge-google-judge.v2.jsonl  sheet.md
evals/golden/: v1.jsonl  v2.jsonl
evals/redteam/: attacks_v1.jsonl
evals/results/: rerank-20260705-011952Z.json  rerank-20260705-012202Z.json  retrieval-20260704-213430Z.json
evals/results/generation-20260709-200512Z/: anthropic--bm25--none.jsonl  anthropic--dense--none.jsonl  anthropic--hybrid--llm.jsonl  anthropic--hybrid--none.jsonl  anthropic--hybrid--none.rejudge-anthropic-judge.v1.jsonl  google--bm25--none.jsonl  google--dense--none.jsonl  google--hybrid--llm.jsonl  google--hybrid--none.jsonl  google--hybrid--none.rejudge-google-judge.v1.jsonl  ollama--bm25--none.jsonl  ollama--dense--none.jsonl  ollama--hybrid--llm.jsonl  ollama--hybrid--none.jsonl  ollama--hybrid--none.rejudge-anthropic-run2-judge.v1.jsonl  ollama--hybrid--none.rejudge-google-judge.v1.jsonl  summary.json
evals/results/generation-20260710-131027Z/: anthropic--hybrid--llm--agentic.jsonl  anthropic--hybrid--llm--vanilla.jsonl  google--hybrid--llm--agentic.jsonl  google--hybrid--llm--vanilla.jsonl  ollama--hybrid--llm--agentic.jsonl  ollama--hybrid--llm--vanilla.jsonl  summary.json
evals/results/generation-20260712-011239Z/: anthropic--bm25--none--agentic.jsonl  anthropic--bm25--none--vanilla.jsonl  anthropic--dense--none--agentic.jsonl  anthropic--dense--none--vanilla.jsonl  anthropic--hybrid--llm--agentic.jsonl  anthropic--hybrid--llm--vanilla.jsonl  anthropic--hybrid--none--agentic.jsonl  anthropic--hybrid--none--vanilla.jsonl  google--bm25--none--agentic.jsonl  google--bm25--none--vanilla.jsonl  google--dense--none--agentic.jsonl  google--dense--none--vanilla.jsonl  google--hybrid--llm--agentic.jsonl  google--hybrid--llm--vanilla.jsonl  google--hybrid--none--agentic.jsonl  google--hybrid--none--vanilla.jsonl  ollama--bm25--none--agentic.jsonl  ollama--bm25--none--vanilla.jsonl  ollama--dense--none--agentic.jsonl  ollama--dense--none--vanilla.jsonl  ollama--hybrid--llm--agentic.jsonl  ollama--hybrid--llm--vanilla.jsonl  ollama--hybrid--none--agentic.jsonl  ollama--hybrid--none--vanilla.jsonl  summary.json
evals/results/guardrails-20260710-verify/: summary.json
evals/results/load-20260710-212006Z/: summary.json
src/agentic_rag/: __init__.py  cli.py  config.py  tokens.py
src/agentic_rag/agent/: __init__.py  critic.py  gather.py  graph.py  planner.py  replay.py  state.py  synthesizer.py
src/agentic_rag/api/: __init__.py  app.py  auth.py  errors.py  schemas.py
src/agentic_rag/evals/: __init__.py  calibration.py  generation.py  judge.py  records.py  report.py  rerank.py  retrieval.py
src/agentic_rag/guardrails/: __init__.py  audit.py  base.py  guarded.py  injection.py  pii.py  policy.py  refusal.py
src/agentic_rag/ingest/: __init__.py  chunk.py  download.py  extract.py  pipeline.py  sources.py
src/agentic_rag/observability/: __init__.py  metrics.py  tracing.py
src/agentic_rag/pipeline/: __init__.py  base.py  citations.py  context.py  pipeline.py  synthesize.py
src/agentic_rag/prompts/: __init__.py  agent-revise.v1.md  agent-synthesis.v1.md  agent-synthesis.v2.md  critic.v1.md  judge.v1.md  judge.v2.md  planner.v1.md  rerank.v1.md  synthesis.v1.md  synthesis.v2.md  synthesis.v3.md
src/agentic_rag/providers/: __init__.py  anthropic.py  base.py  google.py  ollama.py  openai.py  pricing.py  registry.py  retry.py  stub.py
src/agentic_rag/rerank/: __init__.py  base.py  cross_encoder.py  llm.py
tests/: conftest.py
tests/unit/: test_config.py
(+73 files in other folders)
